--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,16 +1,17 @@
-.receipt-card__container {
+.recipe-card__container {
   padding: 10px;
   background-color: white;
   border-radius: 20px;
+  max-width: 15rem;
 }
 
-.receipt-card {
+.recipe-card {
   background-color: white;
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
 
-.receipt-card * {
+.recipe-card * {
   background-color: white;
 }
