--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,3 @@
-@import "layout.css";
-@import "components.css";
-@import "reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 
 :root {
@@ -8,4 +5,16 @@
   --main-text-font: "Roboto Mono", monospace;
   --main-color: rgba(21, 30, 176);
   --background-color: rgb(252, 244, 237);
+  font-family: var(--main-text-font);
+  color: var(--main-color);
+}
+
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: var(--main-color);
+  font-family: var(--main-text-font);
+  background-color: var(--background-color);
 }
